contribute text alignment fix

--- a/client/assets/styles/sass/_contribute.scss
+++ b/client/assets/styles/sass/_contribute.scss
@@ -115,7 +115,7 @@
     }
 
     dt {
-      padding-top: .2em;
+      padding-top: 0 /*.2em*/;
     }
   }
 
@@ -214,3 +214,4 @@
     }
   }
 }
+
